--- a/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
+++ b/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
@@ -182,6 +182,12 @@
     .ant-menu.ant-menu-root.ant-menu-vertical .ant-menu-item > a > span {
         font-size: 0px; }
 
+.ant-menu.ant-menu-root.ant-menu-inline-collapsed:not(ant-menu-vertical), .ant-menu.ant-menu-root.ant-menu-vertical-collapsed {
+    width: 0px;
+    min-width: 0px;
+    transition: width 200ms ease-in-out, min-width 200ms ease-in-out, visibility 100ms;
+    visibility: hidden; }
+
 .ant-btn-secondary {
     color: #fff;
     background-color: #6c757d;
